# Mandelbrot_simu

./: CMakeLists.txt  README.md
shaders/: mandelbrot.frag  mandelbrot.vert
src/: main.cpp  mandelbrot_kernel.cu  shader_utils.cpp
